fixed calendar spacing/alignment

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -123,9 +123,10 @@ p .fringe-link:hover {
 
 .table {
   margin: 0;
+
     td {
       padding: 4px 0px;
-      vertical-align: center;
+      vertical-align: middle;
     }
 }
 
